Botando a animação no modal

--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="icon/pokebola (1).png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="icon/pokebola (1).png"
+      type="image/x-icon"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
     <link rel="stylesheet" href="style.css" />
     <title>Jogo da Memória</title>
   </head>
@@ -18,13 +27,23 @@
 
     <script src="script.js"></script>
 
-  <div id="modal-edu" class="modal-container">
-    <div class="modal" id="divModal">
-      <h3>Para mais projetos acesse meu Github</h3>
-      <a href="https://github.com/edulimaaa" target="_blank" rel="noopener noreferrer">https://github.com/edulimaaa</a>
-      <input type="button" onclick="document.location.reload(true)" value="Volta a Jogar!">
+    <div id="modal-edu" class="modal-container">
+      <div class="animate__animated animate__zoomInDown">
+        <div class="modal" id="divModal">
+          <h3>Para mais projetos acesse meu Github</h3>
+          <a
+            href="https://github.com/edulimaaa"
+            target="_blank"
+            rel="noopener noreferrer"
+            >https://github.com/edulimaaa</a
+          >
+          <input
+            type="button"
+            onclick="document.location.reload(true)"
+            value="Volta a Jogar!"
+          />
+        </div>
+      </div>
     </div>
-  </div>
-
   </body>
 </html>
